--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title> Heroes  </title>
+<title> Tour of Heroes  </title>
 </head>
 <body>
-<h1>Header of Heroes</h1>
+<h1>Tour of Heroes</h1>
 </body>
 </html>
